config-source/overlays/prod-100p-green/gateway-api-demo-http-route-100p-green.yaml
kind: HTTPRoute
apiVersion: networking.x-k8s.io/v1alpha1
metadata:
  name: k8s-gateway-api-demo
  labels:
    #gateway: external-http
    selected: "yes"
spec:
  gateways:
    allow: All
  # hostnames:
  # - "store.example.com"
  rules:
  - matches:
    - path:
        type: Prefix
        value: /
    forwardTo:
    - serviceName: k8s-gateway-api-demo-service-blue
      port: 8080
      weight: 0
    - serviceName: k8s-gateway-api-demo-service-green
      port: 8080
      weight: 100
